--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div id="bottom">
   <footer>
     <p>This is a tribute page to one of the greatest rock bands in history. It was created by Franki Rosenthal.</p>
-    <p>View Franki's <a href=""> Github Repo.</a></p>
+    <p>View Franki's <a href="https://github.com/frankirosenthal/music-sampler"> Github Repo.</a></p>
   </footer>
 </div>
 
